--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,10 +1,14 @@
 <div
-  class="w-full min-h-full gap-6 flex flex-col items-center bg-gray-50 relative px-4"
+  class="w-full min-h-full gap-6 flex flex-col items-center bg-gray-100 relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
-        <a class="font-bold text-gray-900 text-xl hover:no-underline" routerLink="/">Vietspeak</a>
+        <a
+          class="font-bold text-gray-900 text-xl hover:no-underline"
+          routerLink="/"
+          >Vietspeak</a
+        >
         <app-languages></app-languages>
       </div>
       <div class="flex items-center gap-2">
@@ -21,10 +25,18 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-sm">
-      <div class="font-semibold text-2xl mb-2 text-center">
-        {{ "ForgotPassword.Title" | translate }}
+    <div
+      class="w-full max-w-md md:bg-white md:px-8 md:py-14 md:rounded-md md:shadow-base"
+    >
+      <div class="flex flex-col gap-4 text-center">
+        <div class="font-semibold text-2xl">
+          {{ "ForgotPassword.Title" | translate }}
+        </div>
+        <div class="text-gray-600">
+          {{ "ForgotPassword.SubTitle" | translate }}
+        </div>
       </div>
+
       <form
         class="mt-8"
         [formGroup]="forgotPasswordForm"
@@ -92,7 +104,7 @@
           [disabled]="forgotPasswordForm.disabled"
         >
           <span *ngIf="!forgotPasswordForm.disabled">
-            {{ "ForgotPassword.SendLink" | translate }}
+            {{ "ForgotPassword.Continue" | translate }}
           </span>
           <mat-progress-spinner
             *ngIf="forgotPasswordForm.disabled"
