--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative px-4"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-100 relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
@@ -26,7 +26,7 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-sm">
+    <div class="w-full max-w-md md:bg-white md:px-8 md:py-14 md:rounded-md md:shadow-base">
       <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
