--- a/src/material/_material.scss
+++ b/src/material/_material.scss
@@ -10,11 +10,11 @@
     color: null,
     density: -2,
     typography: mat.define-typography-config(
-        $font-family: theme('fontFamily.sans'),
+        $font-family: theme("fontFamily.sans"),
         $title: mat.define-typography-level(1.25rem, 2rem, 600),
-        $body-2: mat.define-typography-level(0.875rem, 1.5rem, 600),
-        $button: mat.define-typography-level(0.875rem, 0.875rem, 500),
-        $input: mat.define-typography-level(0.875rem, 1.2857142857, 400) /* line-height: 20px */
+        $body-2: mat.define-typography-level(0.9375rem, 1.5rem, 600),
+        $button: mat.define-typography-level(0.9375rem, 0.9375rem, 500),
+        $input: mat.define-typography-level(0.9375rem, 1.5, 400)
     )
 ));
 
