update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -26,10 +26,10 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md md:bg-white md:px-8 md:py-14 md:rounded-md md:shadow-base"
+      class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md md:shadow-base"
     >
-      <div class="flex flex-col gap-4 text-center">
-        <div class="font-semibold text-2xl">
+      <div class="flex flex-col gap-3 text-center">
+        <div class="font-semibold text-gray-900 text-2xl capitalize">
           {{ "ForgotPassword.Title" | translate }}
         </div>
         <div class="text-gray-600">
@@ -69,7 +69,8 @@
             *ngIf="
               forgotPasswordForm.get('email')?.status !== 'PENDING' &&
               email.value != '' &&
-              !forgotPasswordForm.disabled
+              !forgotPasswordForm.disabled &&
+              !forgotPasswordForm.get('email')?.valid
             "
             (click)="forgotPasswordForm.get('email')?.setValue('')"
           >
@@ -104,7 +105,7 @@
           [disabled]="forgotPasswordForm.disabled"
         >
           <span *ngIf="!forgotPasswordForm.disabled">
-            {{ "ForgotPassword.Continue" | translate }}
+            {{ "Actions.Continue" | translate }}
           </span>
           <mat-progress-spinner
             *ngIf="forgotPasswordForm.disabled"
@@ -113,6 +114,10 @@
           >
           </mat-progress-spinner>
         </button>
+        <div class="mt-4 text-gray-400 text-center">
+          {{ "ForgotPassword.BackTo" | translate }}
+          <a routerLink="/">{{ "Login.Title" | translate }}</a>
+        </div>
       </form>
     </div>
   </div>
