--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -11,80 +11,27 @@
         >
         <app-languages></app-languages>
       </div>
-      <div class="flex items-center gap-2">
-        <div class="text-gray-400">
-          {{ "Register.AlreadyHaveAccount" | translate }}?
-        </div>
-        <button
-          class="btn--sm"
-          mat-flat-button
-          [color]="'primary'"
-          routerLink="/login"
-        >
-          {{ "Login.Title" | translate }}
-        </button>
-      </div>
     </div>
     <div
       class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md md:shadow-base"
     >
-      <div class="font-semibold text-gray-900 text-2xl mb-2 text-center capitalize">
-        {{ "Register.Title" | translate }}
+      <div class="flex flex-col gap-3 text-center">
+        <div class="font-semibold text-gray-900 text-2xl capitalize">
+          {{ "PasswordReset.Title" | translate }}
+        </div>
+        <div class="text-gray-600">
+          {{ "PasswordReset.SubTitle" | translate }}
+        </div>
       </div>
 
       <form
         class="mt-8"
-        [formGroup]="registerForm"
+        [formGroup]="passwordResetForm"
         (ngSubmit)="submit()"
-        #registerNgForm="ngForm"
+        #passwordResetNgForm="ngForm"
       >
         <mat-form-field appearance="fill" class="w-full">
-          <mat-label>Email</mat-label>
-          <input matInput formControlName="email" #email />
-          <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
-            {{ "Errors.Required" | translate }}
-          </mat-error>
-          <mat-error *ngIf="registerForm.get('email')?.hasError('email')">{{
-            "Errors.Email" | translate
-          }}</mat-error>
-          <mat-error
-            *ngIf="registerForm.get('email')?.hasError('existingEmail')"
-            >{{ "Errors.ExistingEmail" | translate }}</mat-error
-          >
-
-          <button
-            mat-icon-button
-            type="button"
-            matSuffix
-            *ngIf="
-              registerForm.get('email')?.status !== 'PENDING' &&
-              email.value != '' &&
-              !registerNgForm.disabled &&
-              !registerForm.get('email')?.valid
-            "
-            (click)="registerForm.get('email')?.setValue('')"
-          >
-            <mat-icon
-              class="icon-size-5"
-              [svgIcon]="'mat_outline:close'"
-            ></mat-icon>
-          </button>
-          <div class="ml-2" matSuffix *ngIf="registerForm.get('email')?.valid">
-            <mat-icon
-              class="!text-success"
-              [svgIcon]="'mat_outline:check_circle'"
-            ></mat-icon>
-          </div>
-          <mat-progress-spinner
-            [diameter]="24"
-            *ngIf="registerForm.get('email')?.status === 'PENDING'"
-            mode="indeterminate"
-            matSuffix
-          >
-          </mat-progress-spinner>
-        </mat-form-field>
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>{{ "Register.Password" | translate }}</mat-label>
+          <mat-label>{{ "PasswordReset.Password" | translate }}</mat-label>
           <input
             matInput
             type="password"
@@ -112,21 +59,28 @@
               [svgIcon]="'mat_outline:visibility_off'"
             ></mat-icon>
           </button>
-          <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+          <mat-error
+            *ngIf="passwordResetForm.get('password')?.hasError('required')"
+          >
             {{ "Errors.Required" | translate }}
           </mat-error>
           <mat-error
-            *ngIf="registerForm.get('password')?.hasError('minlength')"
+            *ngIf="passwordResetForm.get('password')?.hasError('minlength')"
           >
             {{
               "Errors.MinLength"
                 | translate
-                  : { control: ("Register.Password" | translate), length: "6" }
+                  : {
+                      control: ("PasswordReset.Password" | translate),
+                      length: "6"
+                    }
             }}
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
-          <mat-label>{{ "Register.ConfirmPassword" | translate }}</mat-label>
+          <mat-label>{{
+            "PasswordReset.ConfirmPassword" | translate
+          }}</mat-label>
           <input
             matInput
             type="password"
@@ -155,38 +109,39 @@
             ></mat-icon>
           </button>
           <mat-error
-            *ngIf="registerForm.get('confirmPassword')?.hasError('required')"
+            *ngIf="
+              passwordResetForm.get('confirmPassword')?.hasError('required')
+            "
           >
             {{ "Errors.Required" | translate }}
           </mat-error>
           <mat-error
-            *ngIf="registerForm.get('confirmPassword')?.hasError('mustMatch')"
+            *ngIf="
+              passwordResetForm.get('confirmPassword')?.hasError('mustMatch')
+            "
           >
             {{
               "Errors.MustMatch"
                 | translate
                   : {
-                      control: ("Register.Password" | translate),
-                      matchingControl: ("Register.ConfirmPassword" | translate)
+                      control: ("PasswordReset.Password" | translate),
+                      matchingControl:
+                        ("PasswordReset.ConfirmPassword" | translate)
                     }
             }}
           </mat-error>
         </mat-form-field>
-        <div
-          class="mt-2 text-secondary"
-          [innerHTML]="'Register.Agreement' | translate"
-        ></div>
         <button
           class="w-full !mt-6 btn--lg"
           mat-flat-button
           [color]="'primary'"
-          [disabled]="registerForm.disabled"
+          [disabled]="passwordResetForm.disabled"
         >
-          <span *ngIf="!registerForm.disabled">
+          <span *ngIf="!passwordResetForm.disabled">
             {{ "Actions.Continue" | translate }}
           </span>
           <mat-progress-spinner
-            *ngIf="registerForm.disabled"
+            *ngIf="passwordResetForm.disabled"
             [diameter]="24"
             mode="indeterminate"
           >
